trustfall_core/src/resources/test_data/parse_errors/coercion_with_sibling_fields.parse-error.ron
Err(TypeCoercionWithSiblingFields(Pos(
  line: 8,
  column: 13,
)))
